# vacant

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Justfile  README.md  dist-workspace.toml  release-please-config.json  renovate.json  server.json
.github/workflows/: ci.yml  refresh-rules.yml  release-please.yml  release.yml
crates/vacant/: CHANGELOG.md  Cargo.toml  README.md
crates/vacant-cli/: CHANGELOG.md  Cargo.toml
crates/vacant-cli/src/: main.rs
crates/vacant-core/: CHANGELOG.md  Cargo.toml
crates/vacant-core/src/: disk_cache.rs  dns.rs  lib.rs  orchestrator.rs  rules.rs
crates/vacant-core/tests/: properties.proptest-regressions  properties.rs
crates/vacant-js/: Cargo.toml  build.rs
crates/vacant-js/src/: lib.rs
crates/vacant-py/: Cargo.toml
crates/vacant-py/src/: lib.rs
crates/vacant-pyext/: Cargo.toml
crates/vacant-pyext/src/: lib.rs
crates/vacant/data/: rules.toml
crates/vacant/src/: disk_cache.rs  dns.rs  lib.rs  main.rs  mcp.rs  normalize.rs  orchestrator.rs  rdap.rs  rules.rs
crates/vacant/tests/: cache.rs  mcp.rs  properties.rs
ingest/: forbidden.py  psl.py  rdap.py  rules_io.py
ingest/tests/: conftest.py  test_forbidden.py  test_rules_io.py
js/: .gitignore  CHANGELOG.md  README.md  index.cjs  index.d.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/npm/darwin-arm64/: package.json
js/npm/darwin-x64/: package.json
js/npm/linux-arm64-gnu/: package.json
js/npm/linux-x64-gnu/: package.json
js/src/: bin.ts  checker.ts  cli.ts  disk-cache.ts  index.ts  mcp.ts  native.ts  rules-path.ts
js/tests/: mcp.test.mjs  smoke.test.mjs
js/vacant/: rules.toml
pypi-placeholder/: README.md  pyproject.toml
pypi-placeholder/src/vacant/: __init__.py  __main__.py
python/: CHANGELOG.md  README.md  pyproject.toml
python/tests/: test_mcp.py  test_smoke.py
python/vacant/: _core.pyi  checker.py  cli.py  disk_cache.py  mcp.py  rules.toml
rules/: README.md
src/: disk_cache.rs  lib.rs  main.rs  orchestrator.rs  rdap.rs
tests/: properties.rs
