[package]
name = "vacant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fast domain availability checker. Asks authoritative TLD nameservers directly instead of WHOIS."
repository = "https://github.com/alltuner/vacant"
homepage = "https://github.com/alltuner/vacant"
readme = "../../README.md"
keywords = ["domain", "availability", "dns", "registrar", "tld"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "vacant"
path = "src/main.rs"

[dependencies]
vacant-core = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
