[package]
name = "vacant-py"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["David Poblador i Garcia <david@poblador.com>"]
description = "PyO3 bindings for the vacant Rust engine — domain availability via authoritative DNS."
# Internal cdylib for the python wheel; never published to crates.io. The
# wheel's version comes from python/pyproject.toml, so this version field
# is intentionally fixed and not synced by release-please.
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
vacant = { path = "../vacant" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
