[package]
name = "vacant-pyext"
version = "0.0.5"
edition = "2021"
license = "MIT"
authors = ["David Poblador i Garcia <david@poblador.com>"]
description = "PyO3 bindings for the vacant Rust engine — domain availability via authoritative DNS."
# Internal cdylib for the python wheel; never published to crates.io. The
# wheel's version comes from python/pyproject.toml. The cargo-workspace
# release-please plugin will auto-bump this version on engine releases as
# a side-effect; that's harmless because nothing reads it.
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
vacant = { path = "../vacant" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
