[package]
name = "vacant-pyext"
version = "0.0.6"
edition = "2021"
license = "MIT"
authors = ["David Poblador i Garcia <david@poblador.com>"]
description = "PyO3 bindings for the vacant Rust engine — domain availability via authoritative DNS."
# Internal cdylib for the python wheel; never published to crates.io. The
# wheel's version comes from python/pyproject.toml — this version field is
# unused at runtime and intentionally frozen by release-please config.
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
vacant = { path = "../vacant" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
