[package]
name = "vacant"
version = "0.4.3"
edition = "2021"
license = "MIT"
authors = ["David Poblador i Garcia <david@poblador.com>"]
description = "Fast domain availability checker. Asks authoritative TLD nameservers directly instead of WHOIS."
repository = "https://github.com/alltuner/vacant"
homepage = "https://github.com/alltuner/vacant"
readme = "README.md"
keywords = ["domain", "availability", "dns", "registrar", "tld"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
regex = "1"
thiserror = "2"
hickory-resolver = { version = "0.26", features = ["tokio"] }
hickory-proto = "0.26"
rand = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "http2"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rusqlite = { version = "0.39", features = ["bundled"] }
idna = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
